--- a/src/scss/base/_globals.scss
+++ b/src/scss/base/_globals.scss
@@ -1,5 +1,14 @@
 body{
-  background-color: #3498db;
+  background-color: #2c3e50;
+}
+
+h2{
+  color: white;
+}
+
+.space{
+  height: 50px;
+  width: 100%;
 }
 
 .button-success,
@@ -25,9 +34,4 @@ body{
 
 .button-secondary {
   background: rgb(66, 184, 221); /* this is a light blue */
-}
-
-.pure-g{
-  width: 70%;
-  margin: 0 auto;
 }
