Made custom stylings

--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -3,13 +3,20 @@
     color: white;
   }
 
+  input{
+    overflow: visible;
+
+  }
+
+
+  //File input field
   .file-field{
     position: relative;
 
     .pure-button, .pure-button-primary{
       float: left;
-      height: 3rem;
-      line-height: 3rem;
+      padding: 10px;
+      border-radius: 2px;
     }
 
     input[type="file"] {
@@ -23,17 +30,17 @@
       padding: 0;
       font-size: 20px;
       cursor: pointer;
+      color: black;
       opacity: 0;
     }
 
     .file-path-wrapper{
       overflow: hidden;
       padding-left: 10px;
-    }
-  }
 
-  .custom-file-upload:hover{
-    background-color: rgba(0,0,0,0.4);
-    color: white;
+      .file-path{
+        width: 100%;
+      }
+    }
   }
 }
